// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container correctly 1`] = `
<div
  className="css-1f0737p"
>
  The children!
</div>
`;

exports[`Container renders container correctly with top padding 1`] = `
<div
  className="css-a5jgtn"
>
  The children!
</div>
`;
